
	General:
	* New 'plugins' sub-command to 'debug' command (i.e. '/debug plugins')
	  to announce the list of loaded plugins (in both Finch and Pidgin).
	* Fix building the GnuTLS plugin with older versions of GnuTLS.
	* Fix DNS TXT query resolution.
	* Always rejoin open chats after an account reconnects.

	AIM and ICQ:
	* Better rate limit calculations and other improvements.  (Aman Gupta)

	MSN:
	* Don't forget display names for buddies.
	* Fix a random crash that might occur when idle.
	* Fix more FQY 240 connection errors.
	* Fix a crash that could occur when adding a buddy.
	* Fix an occasional crash when sending message to an offline user.

	XMPP:
	* Users connecting to Google Talk now have an "Initiate Chat" context menu
	  option for their buddies.  (Eion Robb)
	* Fix a crash when attempting to validate an invalid JID.
	* Resolve an issue when connecting to iChat Server when no resource
	  is specified.
	* Fix a crash when adding a buddy without an '@'.

	Yahoo:
	* Fix sending /buzz.
	* Fix blocking behavior for federated (MSN/OCS/Sametime) service users.
	  (Jason Cohen)
	* Add support for adding OCS and Sametime buddies.  OCS users are added
	  as "ocs/user@domain.tld" and Sametime users are added as
	  "ibm/sametime_id".  (Jason Cohen)

	Finch:
	* The TinyURL plugin now creates shorter URLs for long non-conversation
	  URLs, e.g. URLs to open Inbox in Yahoo/MSN protocols, or the Yahoo
	  Captcha when joining chat rooms.

	Pidgin:
	* The userlist in a multiuser chat can be styled via gtkrc by using the
	  widget name "pidgin_conv_userlist". (Heiko Schmitt)
	* Add a hold button to the media window.
	* Tooltips for custom smileys should work now.
	* Users with unread messages are again bolded in the Buddy List.
	* Minor reworking of the Preferences window's Network tab to make it need
	  less vertical space.
	* The global "Use remote DNS with SOCKS4 proxies" preference no longer
	  disappears when the preference value changes in certain ways.
